Utworzono za pomocą Colaboratory

--- a/TensorFlow_C1W3_exercises.ipynb
+++ b/TensorFlow_C1W3_exercises.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPgh1M5M/6WDUsXBqEKbpDj",
+      "authorship_tag": "ABX9TyMUHwfGeF9qyfVvMFUO1BqA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "51wPH4E7PjST",
-        "outputId": "a41d5e36-95b5-4560-e6b2-57c6da9d042b"
+        "outputId": "246ea95d-9725-40c7-95b4-5f8643f66ff6"
       },
       "execution_count": 2,
       "outputs": [
@@ -76,9 +76,9 @@
           "name": "stdout",
           "text": [
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
-            "29515/29515 [==============================] - 0s 1us/step\n",
+            "29515/29515 [==============================] - 0s 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-            "26421880/26421880 [==============================] - 2s 0us/step\n",
+            "26421880/26421880 [==============================] - 1s 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
             "5148/5148 [==============================] - 0s 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
@@ -151,7 +151,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pipDCwwaQich",
-        "outputId": "263a2b63-3072-4e54-8da4-69b1b527d830"
+        "outputId": "2394e56d-0cd9-48c8-a195-63e8d24400e0"
       },
       "execution_count": 5,
       "outputs": [
@@ -162,19 +162,19 @@
             "\n",
             "CONVOLUTIONAL MODEL TRAINING:\n",
             "Epoch 1/5\n",
-            "1875/1875 [==============================] - 18s 4ms/step - loss: 0.4735 - accuracy: 0.8286\n",
+            "1875/1875 [==============================] - 20s 4ms/step - loss: 0.4745 - accuracy: 0.8282\n",
             "Epoch 2/5\n",
-            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.3154 - accuracy: 0.8854\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.3223 - accuracy: 0.8820\n",
             "Epoch 3/5\n",
-            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2721 - accuracy: 0.8999\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2772 - accuracy: 0.8980\n",
             "Epoch 4/5\n",
-            "1875/1875 [==============================] - 11s 6ms/step - loss: 0.2435 - accuracy: 0.9099\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2451 - accuracy: 0.9088\n",
             "Epoch 5/5\n",
-            "1875/1875 [==============================] - 9s 5ms/step - loss: 0.2223 - accuracy: 0.9166\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2210 - accuracy: 0.9172\n",
             "\n",
             "CONVOLUTIONAL MODEL EVALUATION:\n",
-            "313/313 [==============================] - 1s 3ms/step - loss: 0.2547 - accuracy: 0.9070\n",
-            "[0.2547334134578705, 0.9070000052452087]\n"
+            "313/313 [==============================] - 1s 3ms/step - loss: 0.2670 - accuracy: 0.9023\n",
+            "[0.26703956723213196, 0.9023000001907349]\n"
           ]
         }
       ]
@@ -232,7 +232,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DRIdNyoYQqaU",
-        "outputId": "312bca94-6dbc-4d56-9992-90c82798c353"
+        "outputId": "a2900cb3-b73d-48e5-cc54-aed6c5d57a4c"
       },
       "execution_count": 8,
       "outputs": [
@@ -243,19 +243,19 @@
             "\n",
             "CONVOLUTIONAL MODEL TRAINING:\n",
             "Epoch 1/5\n",
-            "1875/1875 [==============================] - 10s 4ms/step - loss: 0.4523 - accuracy: 0.8372\n",
+            "1875/1875 [==============================] - 9s 4ms/step - loss: 0.4444 - accuracy: 0.8396\n",
             "Epoch 2/5\n",
-            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.2984 - accuracy: 0.8914\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2976 - accuracy: 0.8918\n",
             "Epoch 3/5\n",
-            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.2513 - accuracy: 0.9073\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2519 - accuracy: 0.9077\n",
             "Epoch 4/5\n",
-            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.2168 - accuracy: 0.9192\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2183 - accuracy: 0.9181\n",
             "Epoch 5/5\n",
-            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.1912 - accuracy: 0.9283\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.1934 - accuracy: 0.9283\n",
             "\n",
             "CONVOLUTIONAL MODEL EVALUATION:\n",
-            "313/313 [==============================] - 1s 3ms/step - loss: 0.2545 - accuracy: 0.9066\n",
-            "[0.2545338273048401, 0.9065999984741211]\n"
+            "313/313 [==============================] - 1s 3ms/step - loss: 0.2652 - accuracy: 0.9093\n",
+            "[0.2652045488357544, 0.9093000292778015]\n"
           ]
         }
       ]
@@ -312,7 +312,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f6fc630b-90d8-455e-db96-5f1526de49d4",
+        "outputId": "a5b568b5-847d-4aaa-a88b-ee804575291d",
         "id": "B8Hh9QVSahgS"
       },
       "execution_count": 11,
@@ -324,19 +324,19 @@
             "\n",
             "CONVOLUTIONAL MODEL TRAINING:\n",
             "Epoch 1/5\n",
-            "1875/1875 [==============================] - 9s 4ms/step - loss: 0.5098 - accuracy: 0.8153\n",
+            "1875/1875 [==============================] - 8s 3ms/step - loss: 0.5084 - accuracy: 0.8147\n",
             "Epoch 2/5\n",
-            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.3488 - accuracy: 0.8726\n",
+            "1875/1875 [==============================] - 9s 5ms/step - loss: 0.3602 - accuracy: 0.8679\n",
             "Epoch 3/5\n",
-            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.3033 - accuracy: 0.8895\n",
+            "1875/1875 [==============================] - 11s 6ms/step - loss: 0.3160 - accuracy: 0.8832\n",
             "Epoch 4/5\n",
-            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.2767 - accuracy: 0.8971\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.2859 - accuracy: 0.8942\n",
             "Epoch 5/5\n",
-            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2557 - accuracy: 0.9060\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2636 - accuracy: 0.9013\n",
             "\n",
             "CONVOLUTIONAL MODEL EVALUATION:\n",
-            "313/313 [==============================] - 1s 3ms/step - loss: 0.2742 - accuracy: 0.8995\n",
-            "[0.27418750524520874, 0.8995000123977661]\n"
+            "313/313 [==============================] - 1s 3ms/step - loss: 0.2989 - accuracy: 0.8892\n",
+            "[0.29888492822647095, 0.88919997215271]\n"
           ]
         }
       ]
@@ -360,7 +360,7 @@
         "    tf.keras.layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
         "    tf.keras.layers.MaxPooling2D(2, 2),\n",
         "    #    tf.keras.layers.Conv2D(32, (3, 3), activation='relu'),\n",
-        "    tf.keras.layers.MaxPooling2D(2, 2),\n",
+        "    #    tf.keras.layers.MaxPooling2D(2, 2),\n",
         "\n",
         "    # Add the same layers as before\n",
         "    tf.keras.layers.Flatten(),\n",
@@ -385,7 +385,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uha-6KQcdA0x",
-        "outputId": "5478b1ac-5c53-46c2-8ebd-31eac928dc72"
+        "outputId": "e57c2e0d-647a-4d28-8f34-0201345f6044"
       },
       "execution_count": 12,
       "outputs": [
@@ -396,19 +396,183 @@
             "\n",
             "MODEL TRAINING:\n",
             "Epoch 1/5\n",
-            "1875/1875 [==============================] - 8s 3ms/step - loss: 0.4593 - accuracy: 0.8346\n",
+            "1875/1875 [==============================] - 8s 3ms/step - loss: 0.4750 - accuracy: 0.8287\n",
             "Epoch 2/5\n",
-            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.3258 - accuracy: 0.8825\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.3387 - accuracy: 0.8774\n",
             "Epoch 3/5\n",
-            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.2872 - accuracy: 0.8946\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2954 - accuracy: 0.8922\n",
             "Epoch 4/5\n",
-            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.2621 - accuracy: 0.9031\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.2659 - accuracy: 0.9018\n",
             "Epoch 5/5\n",
-            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.2431 - accuracy: 0.9108\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.2455 - accuracy: 0.9092\n",
             "\n",
             "MODEL EVALUATION:\n",
-            "313/313 [==============================] - 1s 3ms/step - loss: 0.2912 - accuracy: 0.8927\n",
-            "[0.29124659299850464, 0.8927000164985657]\n"
+            "313/313 [==============================] - 1s 3ms/step - loss: 0.2852 - accuracy: 0.8970\n",
+            "[0.28521066904067993, 0.8970000147819519]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. How about adding more Convolutions? What impact do you think this will have? Experiment with it."
+      ],
+      "metadata": {
+        "id": "ii9cYpMHVD6a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the model\n",
+        "model = tf.keras.models.Sequential([\n",
+        "\n",
+        "    # Add convolutions and max pooling\n",
+        "    tf.keras.layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
+        "    tf.keras.layers.MaxPooling2D(2, 2),\n",
+        "    tf.keras.layers.Conv2D(32, (3, 3), activation='relu'),\n",
+        "    tf.keras.layers.MaxPooling2D(2, 2),\n",
+        "    tf.keras.layers.Conv2D(32, (3, 3), activation='relu'),\n",
+        "    tf.keras.layers.MaxPooling2D(2, 2),\n",
+        "\n",
+        "    # Add the same layers as before\n",
+        "    tf.keras.layers.Flatten(),\n",
+        "    tf.keras.layers.Dense(128, activation='relu'),\n",
+        "    tf.keras.layers.Dense(10, activation='softmax')\n",
+        "])\n",
+        "\n",
+        "# Use same settings\n",
+        "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "# Train the model\n",
+        "print(f'\\nMODEL TRAINING:')\n",
+        "model.fit(training_images, training_labels, epochs=5)\n",
+        "\n",
+        "# Evaluate on the test set\n",
+        "print(f'\\nMODEL EVALUATION:')\n",
+        "test_loss = model.evaluate(test_images, test_labels)\n",
+        "print(test_loss)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XkpW1l0KVGsd",
+        "outputId": "f9f4b9f1-0c70-4833-f0d3-961272e8038a"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "MODEL TRAINING:\n",
+            "Epoch 1/5\n",
+            "1875/1875 [==============================] - 10s 4ms/step - loss: 0.6331 - accuracy: 0.7663\n",
+            "Epoch 2/5\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.4361 - accuracy: 0.8406\n",
+            "Epoch 3/5\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.3799 - accuracy: 0.8602\n",
+            "Epoch 4/5\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.3459 - accuracy: 0.8725\n",
+            "Epoch 5/5\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.3196 - accuracy: 0.8829\n",
+            "\n",
+            "MODEL EVALUATION:\n",
+            "313/313 [==============================] - 1s 3ms/step - loss: 0.3822 - accuracy: 0.8588\n",
+            "[0.3821916878223419, 0.8587999939918518]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. In the previous lesson you implemented a callback to check on the loss function and to cancel training once it hit a certain amount. See if you can implement that here."
+      ],
+      "metadata": {
+        "id": "a7IPD4lTWSrS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MyCallback(tf.keras.callbacks.Callback):\n",
+        "    def on_epoch_end(self, epoch, logs={}):\n",
+        "        if logs.get('accuracy') >= 0.90:\n",
+        "            print(\"\\nReached 90% accuracy so cancelling training!\")\n",
+        "            self.model.stop_training = True\n",
+        "\n",
+        "\n",
+        "callbacks = MyCallback()"
+      ],
+      "metadata": {
+        "id": "Kbgy833rW_--"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the model\n",
+        "model = tf.keras.models.Sequential([\n",
+        "\n",
+        "    # Add convolutions and max pooling\n",
+        "    tf.keras.layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
+        "    tf.keras.layers.MaxPooling2D(2, 2),\n",
+        "    tf.keras.layers.Conv2D(32, (3, 3), activation='relu'),\n",
+        "    tf.keras.layers.MaxPooling2D(2, 2),\n",
+        "\n",
+        "    # Add the same layers as before\n",
+        "    tf.keras.layers.Flatten(),\n",
+        "    tf.keras.layers.Dense(128, activation='relu'),\n",
+        "    tf.keras.layers.Dense(10, activation='softmax')\n",
+        "])\n",
+        "\n",
+        "# Use same settings\n",
+        "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "# Train the model\n",
+        "print(f'\\nMODEL TRAINING:')\n",
+        "model.fit(training_images, training_labels, epochs=5, callbacks=[callbacks])\n",
+        "\n",
+        "# Evaluate on the test set\n",
+        "print(f'\\nMODEL EVALUATION:')\n",
+        "test_loss = model.evaluate(test_images, test_labels)\n",
+        "print(test_loss)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uusL6WsuWwPk",
+        "outputId": "3be779c3-ae13-49fa-dfdc-c2ec86221f64"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "MODEL TRAINING:\n",
+            "Epoch 1/5\n",
+            "1875/1875 [==============================] - 10s 4ms/step - loss: 0.4703 - accuracy: 0.8299\n",
+            "Epoch 2/5\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.3167 - accuracy: 0.8845\n",
+            "Epoch 3/5\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2718 - accuracy: 0.8992\n",
+            "Epoch 4/5\n",
+            "1870/1875 [============================>.] - ETA: 0s - loss: 0.2430 - accuracy: 0.9103\n",
+            "Reached 90% accuracy so cancelling training!\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2429 - accuracy: 0.9103\n",
+            "\n",
+            "MODEL EVALUATION:\n",
+            "313/313 [==============================] - 1s 4ms/step - loss: 0.2741 - accuracy: 0.9003\n",
+            "[0.2741365134716034, 0.9003000259399414]\n"
           ]
         }
       ]
