--- a/TensorFlow_C1W2_assignment.ipynb
+++ b/TensorFlow_C1W2_assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO2FPg2NdRwvdjJ4qKUTwXA",
+      "authorship_tag": "ABX9TyPrjIbeehVb8V5I6gCGVzs5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,7 +123,7 @@
       "cell_type": "markdown",
       "source": [
         "# Defining your callback\n",
-        "Now it is time to create your own custom callback. For this complete the myCallback class and the on_epoch_end method in the cell below. If you need some guidance on how to proceed, check out this link."
+        "Now it is time to create your own custom callback. For this complete the myCallback class and the on_epoch_end method in the cell below. If you need some guidance on how to proceed, check out this [link](https://www.tensorflow.org/guide/keras/custom_callback)."
       ],
       "metadata": {
         "id": "y9aDPR-uSysc"
@@ -201,7 +201,7 @@
       "metadata": {
         "id": "QpWn8zrBrHgp"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
