Solved the problem. Added inheritance from tf.keras.callbacks.Callback in myCallback definition to avoid compiling error.

--- a/TensorFlow_C1W2_assignment.ipynb
+++ b/TensorFlow_C1W2_assignment.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPrjIbeehVb8V5I6gCGVzs5",
+      "mount_file_id": "1eoqiFwxfgrykM7CcGspN7pK9ckhCzFue",
+      "authorship_tag": "ABX9TyOoUtoxgxCTIgv+iG3Sp4hn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "R7is5A0IRS6X"
       },
@@ -83,7 +84,7 @@
         "current_dir = os.getcwd()\n",
         "\n",
         "# Append data/mnist.npz to the previous path to get the full path\n",
-        "data_path = os.path.join(current_dir, \"data/mnist.npz\")\n",
+        "data_path =  os.path.join(current_dir, \"/content/drive/MyDrive/Colab Notebooks/Project/datasets/mnist.npz\") # Updated file path.\n",
         "\n",
         "# Discard test set\n",
         "(x_train, y_train), _ = tf.keras.datasets.mnist.load_data(path=data_path)\n",
@@ -94,7 +95,7 @@
       "metadata": {
         "id": "7-MKrajESreb"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -114,10 +115,22 @@
         "print(f\"There are {data_shape[0]} examples with shape ({data_shape[1]}, {data_shape[2]})\")"
       ],
       "metadata": {
-        "id": "ZiwifJAfSwIb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZiwifJAfSwIb",
+        "outputId": "74f5e9b0-a665-4487-d817-fa28e272929f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 60000 examples with shape (28, 28)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -136,21 +149,21 @@
         "### START CODE HERE\n",
         "\n",
         "# Remember to inherit from the correct class\n",
-        "class myCallback():\n",
+        "class myCallback(tf.keras.callbacks.Callback):\n",
         "        # Define the correct function signature for on_epoch_end\n",
-        "        def on_epoch_end(None, None, None=None):\n",
+        "        def on_epoch_end(self, epoch, logs=None):\n",
         "            if logs.get('accuracy') is not None and logs.get('accuracy') > 0.99:\n",
         "                print(\"\\nReached 99% accuracy so cancelling training!\")\n",
         "\n",
         "                # Stop training once the above condition is met\n",
-        "                None = None\n",
+        "                self.model.stop_training = True\n",
         "\n",
         "### END CODE HERE"
       ],
       "metadata": {
         "id": "6I0s_1PFS0SG"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -178,11 +191,13 @@
         "    ### START CODE HERE\n",
         "\n",
         "    # Instantiate the callback class\n",
-        "    callbacks = None\n",
+        "    callbacks = myCallback()\n",
         "\n",
         "    # Define the model\n",
         "    model = tf.keras.models.Sequential([\n",
-        "        None,\n",
+        "        tf.keras.layers.Flatten(),\n",
+        "        tf.keras.layers.Dense(256, activation=tf.nn.relu),\n",
+        "        tf.keras.layers.Dense(10, activation=tf.nn.softmax)\n",
         "    ])\n",
         "\n",
         "    # Compile the model\n",
@@ -192,7 +207,7 @@
         "\n",
         "    # Fit the model for 10 epochs adding the callbacks\n",
         "    # and save the training history\n",
-        "    history = model.fit(None, None, epochs=None, callbacks=[None])\n",
+        "    history = model.fit(x_train, y_train, epochs=10, callbacks=[callbacks])\n",
         "\n",
         "    ### END CODE HERE\n",
         "\n",
@@ -201,13 +216,13 @@
       "metadata": {
         "id": "QpWn8zrBrHgp"
       },
-      "execution_count": 3,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Call the train_mnist passing in the appropiate parameters to get the training history:"
+        "Call the train_mnist passing in the appropriate parameters to get the training history:"
       ],
       "metadata": {
         "id": "yNEBLXE2rJSC"
@@ -219,10 +234,35 @@
         "hist = train_mnist(x_train, y_train)"
       ],
       "metadata": {
-        "id": "__-JCmJArL-e"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "__-JCmJArL-e",
+        "outputId": "183f128b-7f47-4eff-929f-17884a23919e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "1875/1875 [==============================] - 11s 3ms/step - loss: 0.2263 - accuracy: 0.9352\n",
+            "Epoch 2/10\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0923 - accuracy: 0.9721\n",
+            "Epoch 3/10\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0615 - accuracy: 0.9819\n",
+            "Epoch 4/10\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0444 - accuracy: 0.9861\n",
+            "Epoch 5/10\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0323 - accuracy: 0.9898\n",
+            "Epoch 6/10\n",
+            "1858/1875 [============================>.] - ETA: 0s - loss: 0.0246 - accuracy: 0.9921\n",
+            "Reached 99% accuracy so cancelling training!\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0246 - accuracy: 0.9921\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
