Solved for different MNIST dataset (RGB instead of grayscale).

--- a/TensorFlow_C1W3_assignment.ipynb
+++ b/TensorFlow_C1W3_assignment.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1oH0U6Yo2OvpUZwHjYBn5U_DoNqmZlJnW",
-      "authorship_tag": "ABX9TyMZfNPeobpvyGkbVMDQB7u1",
+      "authorship_tag": "ABX9TyN12RdaBrithUY5/jo+o+iS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "7-MKrajESreb"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -121,10 +121,10 @@
         "    ### START CODE HERE\n",
         "\n",
         "    # Reshape the images to add an extra dimension\n",
-        "    images = None\n",
+        "    images = images.reshape(60000, 28, 28, 1)\n",
         "\n",
         "    # Normalize pixel values\n",
-        "    images = None\n",
+        "    images = np.divide(images, np.array([1.0, 255.0, 255.0], dtype=float))\n",
         "\n",
         "    ### END CODE HERE\n",
         "\n",
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "ZiwifJAfSwIb"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -159,10 +159,26 @@
         "print(f\"Shape of one image after reshaping: {training_images[0].shape}\")"
       ],
       "metadata": {
-        "id": "6I0s_1PFS0SG"
+        "id": "6I0s_1PFS0SG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a6b32d84-e1d1-4639-ea4e-f1abc14045fd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Maximum pixel value after normalization: 255.0\n",
+            "\n",
+            "Shape of training set after reshaping: (60000, 28, 28, 3)\n",
+            "\n",
+            "Shape of one image after reshaping: (28, 28, 3)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -183,20 +199,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# GRADED CLASS: myCallback\n",
+        "# GRADED CLASS: MyCallback\n",
         "### START CODE HERE\n",
         "\n",
         "# Remember to inherit from the correct class\n",
-        "class myCallback():\n",
+        "class MyCallback(tf.keras.callbacks.Callback):\n",
         "    # Define the method that checks the accuracy at the end of each epoch\n",
-        "    pass\n",
+        "    def on_epoch_end(self, epoch, logs=None):\n",
+        "        if logs.get(\"accuracy\") >= 0.995:\n",
+        "            print(\"\\nLoss is low, so I'm cancelling further training.\")\n",
+        "            self.model.stop_training = True\n",
         "\n",
         "### END CODE HERE"
       ],
       "metadata": {
         "id": "QpWn8zrBrHgp"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -226,7 +245,11 @@
         "\n",
         "    # Define the model\n",
         "    model = tf.keras.models.Sequential([\n",
-        "      None,\n",
+        "        tf.keras.layers.Conv2D(128, (3, 3), activation='relu', input_shape=(28, 28, 3)),\n",
+        "        tf.keras.layers.MaxPooling2D(2, 2),\n",
+        "        tf.keras.layers.Flatten(),\n",
+        "        tf.keras.layers.Dense(256, activation=tf.nn.relu),\n",
+        "        tf.keras.layers.Dense(10, activation=tf.nn.softmax),\n",
         "    ])\n",
         "\n",
         "    ### END CODE HERE\n",
@@ -241,7 +264,7 @@
       "metadata": {
         "id": "__-JCmJArL-e"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -251,16 +274,49 @@
         "model = convolutional_model()\n",
         "\n",
         "# Instantiate the callback class\n",
-        "callbacks = myCallback()\n",
+        "callbacks = MyCallback()\n",
         "\n",
         "# Train your model (this can take up to 5 minutes)\n",
         "history = model.fit(training_images, training_labels, epochs=10, callbacks=[callbacks])"
       ],
       "metadata": {
-        "id": "6CAJE1i9i6xJ"
+        "id": "6CAJE1i9i6xJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "263f08ae-daae-4e1f-b188-d2c7b88b388a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "1875/1875 [==============================] - 9s 4ms/step - loss: 0.8075 - accuracy: 0.9490\n",
+            "Epoch 2/10\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0681 - accuracy: 0.9797\n",
+            "Epoch 3/10\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0507 - accuracy: 0.9841\n",
+            "Epoch 4/10\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0430 - accuracy: 0.9872\n",
+            "Epoch 5/10\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0311 - accuracy: 0.9911\n",
+            "Epoch 6/10\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0246 - accuracy: 0.9929\n",
+            "Epoch 7/10\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0208 - accuracy: 0.9939\n",
+            "Epoch 8/10\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0226 - accuracy: 0.9941\n",
+            "Epoch 9/10\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0215 - accuracy: 0.9949\n",
+            "Epoch 10/10\n",
+            "1874/1875 [============================>.] - ETA: 0s - loss: 0.0171 - accuracy: 0.9956\n",
+            "Loss is low, so I'm cancelling further training.\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0171 - accuracy: 0.9956\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -277,10 +333,22 @@
         "print(f\"Your model was trained for {len(history.epoch)} epochs\")"
       ],
       "metadata": {
-        "id": "GSzeXIbRrppB"
+        "id": "GSzeXIbRrppB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5ef97ef5-6a10-4836-eb55-6e8f3f541519"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Your model was trained for 10 epochs\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
