--- a/TensorFlow_C1W4_assignment.ipynb
+++ b/TensorFlow_C1W4_assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOa2uMX3k469VIp1qSQr2OX",
+      "authorship_tag": "ABX9TyOpm337KmaHUcGcuFnriwsI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,8 +43,10 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
+        "import matplotlib.pyplot as plt\n",
         "import tensorflow as tf\n",
+        "import numpy as np\n",
+        "import os\n",
         "from tensorflow.keras.preprocessing.image import load_img, img_to_array, ImageDataGenerator\n",
         "from tensorflow.keras import optimizers, losses\n",
         "import base64"
