--- a/TensorFlow_C1W4_assignment.ipynb
+++ b/TensorFlow_C1W4_assignment.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1f8MmHrv1LtppIHe2x_GjCGUWKdJqEj78",
-      "authorship_tag": "ABX9TyOsxXW5Q2Gt0KGwCupsRjpP",
+      "authorship_tag": "ABX9TyPaNWu9B9qVQbAux5JNHJ+d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "Gs401Bdod_kU"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -93,9 +93,9 @@
           "height": 903
         },
         "id": "oZnpEJc8yUWe",
-        "outputId": "8ef28695-43ba-46b6-c610-6fec112214b0"
+        "outputId": "74d005dd-4e1d-47be-9621-4dcc7d13ee22"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,9 +163,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5e19978a-d2b9-4f81-ea6a-bc836718e95a"
+        "outputId": "7ba22233-ef72-4af2-eed5-b660852a8b48"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,7 +203,7 @@
       "metadata": {
         "id": "u0fUJpViylYR"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -229,18 +229,18 @@
         "\n",
         "    # Instantiate the ImageDataGenerator class.\n",
         "    # Remember to set the rescale argument.\n",
-        "    train_datagen = None\n",
+        "    train_datagen = ImageDataGenerator(rescale=1/255)\n",
         "\n",
         "    # Specify the method to load images from a directory and pass in the appropriate arguments:\n",
         "    # - directory: should be a relative path to the directory containing the data\n",
-        "    # - targe_size: set this equal to the resolution of each image (excluding the color dimension)\n",
+        "    # - target_size: set this equal to the resolution of each image (excluding the color dimension)\n",
         "    # - batch_size: number of images the generator yields when asked for a next batch. Set this to 10.\n",
         "    # - class_mode: How the labels are represented. Should be one of \"binary\", \"categorical\" or \"sparse\".\n",
         "    #               Pick the one that better suits here given that the labels are going to be 1D binary labels.\n",
-        "    train_generator = train_datagen.flow_from_directory(directory=None,\n",
-        "                                                        target_size=(None, None),\n",
-        "                                                        batch_size=None,\n",
-        "                                                        class_mode=None)\n",
+        "    train_generator = train_datagen.flow_from_directory(directory=base_dir,\n",
+        "                                                        target_size=(150, 150),\n",
+        "                                                        batch_size=10,\n",
+        "                                                        class_mode=\"binary\")\n",
         "    ### END CODE HERE\n",
         "\n",
         "    return train_generator"
@@ -248,7 +248,7 @@
       "metadata": {
         "id": "gTQl45MJzHa-"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -258,10 +258,22 @@
         "gen = image_generator()"
       ],
       "metadata": {
-        "id": "-9SrQp5pzJr1"
+        "id": "-9SrQp5pzJr1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "98213bdb-98eb-4e19-81b9-202dce45e7b1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 80 images belonging to 2 classes.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -297,13 +309,21 @@
         "\n",
         "    # Define the model\n",
         "    model = tf.keras.models.Sequential([\n",
-        "        None,\n",
+        "        tf.keras.layers.Conv2D(16, (3, 3), activation='relu', input_shape=(150, 150, 3)),\n",
+        "        tf.keras.layers.MaxPooling2D(2, 2),\n",
+        "        tf.keras.layers.Conv2D(32, (3, 3), activation='relu', input_shape=(150, 150, 3)),\n",
+        "        tf.keras.layers.MaxPooling2D(2, 2),\n",
+        "        tf.keras.layers.Conv2D(64, (3, 3), activation='relu', input_shape=(150, 150, 3)),\n",
+        "        tf.keras.layers.MaxPooling2D(2, 2),\n",
+        "        tf.keras.layers.Flatten(),\n",
+        "        tf.keras.layers.Dense(512, activation='relu'),\n",
+        "        tf.keras.layers.Dense(1, activation='sigmoid')\n",
         "    ])\n",
         "\n",
         "    # Compile the model\n",
         "    # Select a loss function compatible with the last layer of your network\n",
-        "    model.compile(loss=losses.None,\n",
-        "                  optimizer=optimizers.None,\n",
+        "    model.compile(loss=losses.binary_crossentropy,\n",
+        "                  optimizer=optimizers.RMSprop(learning_rate=0.001),\n",
         "                  metrics=['accuracy'])\n",
         "\n",
         "\n",
@@ -311,9 +331,9 @@
         "    # Train the model\n",
         "    # Your model should achieve the desired accuracy in less than 15 epochs.\n",
         "    # You can hardcode up to 20 epochs in the function below but the callback should trigger before 15.\n",
-        "    history = model.fit(x=None,\n",
-        "                        epochs=None,\n",
-        "                        callbacks=[None]\n",
+        "    history = model.fit(x=train_generator,\n",
+        "                        epochs=20,\n",
+        "                        callbacks=[callbacks]\n",
         "                       )\n",
         "\n",
         "    ### END CODE HERE\n",
@@ -322,7 +342,7 @@
       "metadata": {
         "id": "EqGWtTo9zaMt"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -331,10 +351,47 @@
         "hist = train_happy_sad_model(gen)"
       ],
       "metadata": {
-        "id": "DN48JMuPzbr4"
+        "id": "DN48JMuPzbr4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fdf781e7-7214-4808-e8e2-e164da925ea8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/20\n",
+            "8/8 [==============================] - 59s 6s/step - loss: 1.3472 - accuracy: 0.5375\n",
+            "Epoch 2/20\n",
+            "8/8 [==============================] - 0s 45ms/step - loss: 0.6199 - accuracy: 0.6000\n",
+            "Epoch 3/20\n",
+            "8/8 [==============================] - 0s 39ms/step - loss: 0.2890 - accuracy: 0.9625\n",
+            "Epoch 4/20\n",
+            "8/8 [==============================] - 1s 60ms/step - loss: 0.1997 - accuracy: 0.9375\n",
+            "Epoch 5/20\n",
+            "8/8 [==============================] - 0s 33ms/step - loss: 0.1609 - accuracy: 0.9625\n",
+            "Epoch 6/20\n",
+            "8/8 [==============================] - 0s 35ms/step - loss: 0.1130 - accuracy: 0.9625\n",
+            "Epoch 7/20\n",
+            "8/8 [==============================] - 0s 44ms/step - loss: 0.0674 - accuracy: 0.9625\n",
+            "Epoch 8/20\n",
+            "8/8 [==============================] - 0s 47ms/step - loss: 0.1195 - accuracy: 0.9500\n",
+            "Epoch 9/20\n",
+            "8/8 [==============================] - 0s 47ms/step - loss: 0.0335 - accuracy: 0.9875\n",
+            "Epoch 10/20\n",
+            "8/8 [==============================] - 0s 46ms/step - loss: 0.0567 - accuracy: 0.9750\n",
+            "Epoch 11/20\n",
+            "8/8 [==============================] - 0s 44ms/step - loss: 0.0617 - accuracy: 0.9750\n",
+            "Epoch 12/20\n",
+            "7/8 [=========================>....] - ETA: 0s - loss: 0.0145 - accuracy: 1.0000\n",
+            "Reached 99.9% accuracy so cancelling training!\n",
+            "8/8 [==============================] - 0s 44ms/step - loss: 0.0140 - accuracy: 1.0000\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -351,10 +408,22 @@
         "print(f\"Your model reached the desired accuracy after {len(hist.epoch)} epochs\")"
       ],
       "metadata": {
-        "id": "XtfaEi2-zfG8"
+        "id": "XtfaEi2-zfG8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "919ba9d1-8ceb-449b-9af1-327e467ab9cb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Your model reached the desired accuracy after 12 epochs\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -374,10 +443,22 @@
         "    print(\"The metric was correctly defined.\")"
       ],
       "metadata": {
-        "id": "xJ2Cb_i8zidh"
+        "id": "xJ2Cb_i8zidh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b86038af-1b0f-488b-ead9-b682f6f2bffb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The metric was correctly defined.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
