Partial solution. Work in progress.

--- a/TensorFlow_C2W1_assignment.ipynb
+++ b/TensorFlow_C2W1_assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOqF4KGSyaeM9RvbZ7oR3IX",
+      "authorship_tag": "ABX9TyPkjgWVmhoN0Ol7ZgEFPkPA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -202,8 +202,15 @@
         "  # Use os.makedirs to create your directories with intermediate subdirectories\n",
         "  # Don't hardcode the paths. Use os.path.join to append the new directories to the root_path parameter\n",
         "\n",
-        "  pass\n",
-        "\n",
+        "  os.makedirs(root_dir)\n",
+        "  train_dir = os.path.join(root_dir, 'training')\n",
+        "  val_dir = os.path.join(root_dir, 'validation')\n",
+        "  os.makedirs(train_dir)\n",
+        "  os.makedirs(val_dir)\n",
+        "  os.makedirs(os.path.join(train_dir, 'cats'))\n",
+        "  os.makedirs(os.path.join(train_dir, 'dogs'))\n",
+        "  os.makedirs(os.path.join(val_dir, 'cats'))\n",
+        "  os.makedirs(os.path.join(val_dir, 'dogs'))\n",
         "\n",
         "  ### END CODE HERE\n",
         "\n",
@@ -216,7 +223,7 @@
       "metadata": {
         "id": "US40K0siOpZo"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -229,10 +236,27 @@
         "        print(os.path.join(rootdir, subdir))"
       ],
       "metadata": {
-        "id": "emdAWoyrIht7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "emdAWoyrIht7",
+        "outputId": "c391e7b5-d3c5-4d99-d03c-cbcfdee7b54a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/tmp/cats-v-dogs/training\n",
+            "/tmp/cats-v-dogs/validation\n",
+            "/tmp/cats-v-dogs/training/dogs\n",
+            "/tmp/cats-v-dogs/training/cats\n",
+            "/tmp/cats-v-dogs/validation/dogs\n",
+            "/tmp/cats-v-dogs/validation/cats\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
