--- a/TensorFlow_C2W1_assignment.ipynb
+++ b/TensorFlow_C2W1_assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOetA6aXdtU8jswE3gNgI67",
+      "authorship_tag": "ABX9TyPcguO2R/iddxsXj/Gs4l+I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "rUYjX7ubOSgo"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
         "id": "_0D4SeQ9OYHT",
         "outputId": "1280e731-e698-4867-f7e2-f3aea8e5194f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
         "id": "Xqc1tSUdOfeU",
         "outputId": "97f6c9dc-766c-4a4a-af77-b2aace8bb077"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,17 +203,17 @@
         "  # Don't hardcode the paths. Use os.path.join to append the new directories to the root_path parameter\n",
         "\n",
         "  # Initial directory:\n",
-        "  os.makedirs(root_dir)\n",
+        "  os.makedirs(root_path)\n",
         "\n",
         "  # Subdirs:\n",
-        "  train_dir = os.path.join(root_dir, 'training')\n",
-        "  val_dir = os.path.join(root_dir, 'validation')\n",
+        "  train_dir = os.path.join(root_path, 'training')\n",
+        "  val_dir = os.path.join(root_path, 'validation')\n",
         "  os.makedirs(train_dir)\n",
         "  os.makedirs(val_dir)\n",
-        "  os.makedirs(os.path.join(train_dir, 'cats'))\n",
-        "  os.makedirs(os.path.join(train_dir, 'dogs'))\n",
-        "  os.makedirs(os.path.join(val_dir, 'cats'))\n",
-        "  os.makedirs(os.path.join(val_dir, 'dogs'))\n",
+        "  os.makedirs(os.path.join(root_path, 'cats'))\n",
+        "  os.makedirs(os.path.join(root_path, 'dogs'))\n",
+        "  os.makedirs(os.path.join(root_path, 'cats'))\n",
+        "  os.makedirs(os.path.join(root_path, 'dogs'))\n",
         "\n",
         "  ### END CODE HERE\n",
         "\n",
@@ -226,7 +226,7 @@
       "metadata": {
         "id": "US40K0siOpZo"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
         "id": "emdAWoyrIht7",
         "outputId": "2d01916b-a90e-40e9-e1f5-5b574ae96143"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +345,7 @@
       "metadata": {
         "id": "A73Wr4z9JG9G"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -407,7 +407,7 @@
         },
         "outputId": "6fd64b8b-cbee-4cf7-b075-bdd53075fe8f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,7 +496,7 @@
       "metadata": {
         "id": "o-KZ1q_YJuXY"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -512,7 +512,7 @@
         },
         "outputId": "f99cef52-32e2-451c-a586-6894ee331df2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,7 +578,7 @@
       "metadata": {
         "id": "F2SCNDTJJ3xV"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -612,7 +612,7 @@
         },
         "outputId": "ff63615e-b054-4003-914a-2240f7bc1e2a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -716,7 +716,7 @@
         },
         "outputId": "7be1ec04-822d-4d0c-b763-2e3aaaa01d33"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -780,7 +780,7 @@
         },
         "outputId": "1bd1f875-c175-4867-9d26-992548260bc0"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -875,7 +875,7 @@
         },
         "outputId": "611aa517-a1bb-4006-ea4f-67cb94aeabea"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -912,7 +912,7 @@
         },
         "outputId": "f5ce948c-b8ca-4bb6-9edb-44ce1063993d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
